--- a/_includes/index-9-onepage.html
+++ b/_includes/index-9-onepage.html
@@ -379,8 +379,8 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="far fa-phone"></i><a href="tel:+256214203215">+256 214 203 215</a></li>
-                                <li><i class="far fa-envelope"></i><a href="mailto:info@rasm.com">info@rasm.com</a></li>
+                                <li><i class="far fa-phone"></i><a href="tel:+19566002525">+1 956 600 2525</a></li>
+                                <li><i class="far fa-envelope"></i><a href="mailto:info@afrodita.com">info@afrodita.com</a></li>
                                 <li><i class="fa-light fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</li>
                             </ul>
                         </div>
@@ -1061,10 +1061,10 @@ Appointment Area
                             <a href="about.html" class="th-btn">Discover More <i class="fa-solid fa-arrow-right ms-2"></i></a>
                             <div class="feature-wrapper">
                                 <div class="feature-icon">
-                                    <a href="tel:+256214203215"><i class="fa-solid fa-phone"></i></a>
+                                    <a href="tel:+19566002525"><i class="fa-solid fa-phone"></i></a>
                                 </div>
                                 <div class="media-body">
-                                    <a class="box-title text-white" href="tel:+256214203215">+256 214 203 215</a>
+                                    <a class="box-title text-white" href="tel:+19566002525">+1 956 600 2525</a>
                                 </div>
                             </div>
                         </div>
@@ -1280,7 +1280,7 @@ Brand Area
                         <div class="widget footer-widget">
                             <h3 class="widget_title">Rasm Location</h3>
                             <div class="th-widget-about style2">
-                                <p class="footer-info"><i class="fas fa-map-marker-alt"></i>25 Street, 145 City Town, USA</p>
+                                <p class="footer-info"><i class="fas fa-map-marker-alt"></i>C. Hidalgo 687, CENTRO, 88500 Reynosa, Tamps., Mexico</p>
                                 <p class="footer-info"><i class="fa fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</p>
                                 <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:info@rasm.com">info@rasm.com</a></p>
                             </div>
