--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -9,7 +9,7 @@
                     <div class="row align-items-end">
                         <div class="col-lg-7">
                             <div class="hero-style2">
-                                <span class="sub-title" data-ani="slideindown" data-ani-delay="0.1s"><img src="assets/img/theme-img/title_left.svg" alt="shape">Welcome to Rasm Nail Stylist</span>
+                                <span class="sub-title" data-ani="slideindown" data-ani-delay="0.1s"><img src="assets/img/theme-img/title_left.svg" alt="shape">Welcome to Afrodita Nail Stylist</span>
                                 <h1 class="hero-title mb-0" data-ani="slideinleft" data-ani-delay="0.2s">
                                     Nail Artistry </h1>
                                 <span class="hero-img" data-ani="slideinup" data-ani-delay="0.3s"><img src="assets/img/hero/nail.png" alt=""></span>
@@ -60,7 +60,7 @@ About Area
             <div class="video-group text-center">
                 <a href="about.html" class="th-btn">More About Us<i class="fa-regular fa-arrow-right ms-2"></i>
                 </a>
-                <a href="tel:+256214203215" class="th-btn style2">Make A Call<i class="fa-regular fa-arrow-right ms-2"></i>
+                <a href="tel:+19566002525" class="th-btn style2">Make A Call<i class="fa-regular fa-arrow-right ms-2"></i>
                 </a>
             </div>
             <div class="row gy-4 align-items-center">
@@ -941,9 +941,9 @@ gallery-thumb Area
             <div class="row th-carousel" id="gallerySlide1" data-slide-show="9" data-xl-slide-show="6" data-lg-slide-show="4" data-md-slide-show="3" data-sm-slide-show="3" data-xs-slide-show="2" data-autoplay="false">
                 <div class="gallery-thumb">
                     <img src="assets/img/widget/gallery_1_1.jpg" alt="Gallery Image">
-                    <a href="assets/img/widget/gallery_1_1.jpg" class="gallery-btn popup-image"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/afrodita_luxespa" class="gallery-btn popup-image"><i class="fab fa-instagram"></i></a>
                 </div>
-                <div class="gallery-thumb">
+                <!-- <div class="gallery-thumb">
                     <img src="assets/img/widget/gallery_1_2.jpg" alt="Gallery Image">
                     <a href="assets/img/widget/gallery_1_2.jpg" class="gallery-btn popup-image"><i class="fab fa-instagram"></i></a>
                 </div>
@@ -978,7 +978,7 @@ gallery-thumb Area
                 <div class="gallery-thumb">
                     <img src="assets/img/widget/gallery_1_10.jpg" alt="Gallery Image">
                     <a href="assets/img/widget/gallery_1_10.jpg" class="gallery-btn popup-image"><i class="fab fa-instagram"></i></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
