--- a/assets/sass/update_2/_team.scss
+++ b/assets/sass/update_2/_team.scss
@@ -39,7 +39,7 @@
         .team-border {
             width: 106px;
             height: 2px;
-            background: linear-gradient(270deg, rgba(194, 133, 101, 0.00) 4.24%, #C28565 52.64%, rgba(194, 133, 101, 0.00) 99.06%);
+            background: linear-gradient(270deg, rgba(240, 160, 192, 0.00) 4.24%, #f0a0c0 52.64%, rgba(240, 160, 192, 0.00) 99.06%);
             display: block;
             margin: auto;
             margin-bottom: 5px;
