--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -258,7 +258,7 @@
                             <p class="desc">Mon-Sat: 08.00 am to 5.00 pm</p>
                         </div>
                         <div class="th-social  footer-social">
-                            <a href="https://www.facebook.com/">
+                            {# <a href="https://www.facebook.com/">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                             <a href="https://www.twitter.com/">
@@ -269,7 +269,7 @@
                             </a>
                             <a href="https://www.behance.net/">
                                 <i class="fa-brands fa-behance"></i>
-                            </a>
+                            </a> #}
                         </div>
                     </div>
                 </div>
@@ -347,14 +347,14 @@
                                 <ul>
                                     <li>
                                         <i class="far fa-phone"></i>
-                                        <a href="tel:+256214203215">+256 214 203 215</a>
+                                        <a href="tel:+19566002525">+1 956 600 2525</a>
                                     </li>
                                     <li>
                                         <i class="far fa-envelope"></i>
-                                        <a href="mailto:info@rasm.com">info@rasm.com</a>
+                                        <a href="mailto:info@afrodita.com">info@afrodita.com</a>
                                     </li>
                                     <li>
-                                        <i class="fal fa-location-dot"></i>25 Street, 145 City Town, USA</li>
+                                        <i class="fal fa-location-dot"></i>C. Hidalgo 687, CENTRO, 88500 Reynosa, Tamps., Mexico</li>
                                     <li>
                                         <i class="fa-light fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</li>
                                 </ul>
@@ -363,7 +363,7 @@
                         <div class="col-auto">
                             <div class="social-links">
                                 <span class="social-title">Follow Us:</span>
-                                <a href="https://www.facebook.com/">
+                                {# <a href="https://www.facebook.com/">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a href="https://www.twitter.com/">
@@ -371,13 +371,13 @@
                                 </a>
                                 <a href="https://www.linkedin.com/">
                                     <i class="fab fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://www.instagram.com/">
+                                </a> #}
+                                <a href="https://www.instagram.com/afrodita_luxespa">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="https://www.youtube.com/">
+                                {# <a href="https://www.youtube.com/">
                                     <i class="fab fa-youtube"></i>
-                                </a>
+                                </a> #}
                             </div>
                         </div>
                     </div>
@@ -451,15 +451,15 @@
                                     <div class="th-widget-about">
                                         <p class="footer-info">
                                             <i class="fa-sharp fa-solid fa-phone"></i>
-                                            <a class="text-inherit" href="tel:+256214203215">+256 214 203 215</a>
+                                            <a class="text-inherit" href="tel:+19566002525">+1 956 600 2525</a>
                                         </p>
                                         <p class="footer-info">
                                             <i class="fas fa-envelope"></i>
-                                            <a class="text-inherit" href="mailto:info@rasm.com">info@rasm.com</a>
+                                            <a class="text-inherit" href="mailto:info@afrodita.com">info@afrodita.com</a>
                                         </p>
                                     </div>
                                     <div class="th-social footer-social mt-40">
-                                        <a href="https://www.facebook.com/">
+                                        {# <a href="https://www.facebook.com/">
                                             <i class="fab fa-facebook-f"></i>
                                         </a>
                                         <a href="https://www.twitter.com/">
@@ -470,7 +470,7 @@
                                         </a>
                                         <a href="https://www.behance.net/">
                                             <i class="fa-brands fa-behance"></i>
-                                        </a>
+                                        </a> #}
                                     </div>
                                 </div>
                             </div>
