--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -378,8 +378,8 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="far fa-phone"></i><a href="tel:+256214203215">+256 214 203 215</a></li>
-                                <li><i class="far fa-envelope"></i><a href="mailto:info@rasm.com">info@rasm.com</a></li>
+                                <li><i class="far fa-phone"></i><a href="tel:+19566002525">+1 956 600 2525</a></li>
+                                <li><i class="far fa-envelope"></i><a href="mailto:info@afrodita.com">info@afrodita.com</a></li>
                                 <li><i class="fa-light fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</li>
                             </ul>
                         </div>
@@ -605,7 +605,7 @@ Contact Area
                                 <h3 class="box-title">Phone Number</h3>
                                 <span class="contact-info_text">
                                     Mobile:
-                                    <a href="tel:+256214203215"> +256 214 203 215 </a>
+                                    <a href="tel:+19566002525"> +1 956 600 2525 </a>
                                 </span>
                                 <span class="contact-info_text">
                                     Email:
@@ -721,9 +721,9 @@ Contact Area
                             <h3 class="widget_title">Contact Details</h3>
                             <div class="th-widget-about">
                                 <h4 class="footer-info-title">Phone Number</h4>
-                                <p class="footer-info"><i class="fa-sharp fa-solid fa-phone"></i><a class="text-inherit" href="tel:+256214203215">+256 214 203 215</a></p>
+                                <p class="footer-info"><i class="fa-sharp fa-solid fa-phone"></i><a class="text-inherit" href="tel:+19566002525">+1 956 600 2525</a></p>
                                 <h4 class="footer-info-title">Email Address</h4>
-                                <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:info@rasm.com">info@rasm.com</a></p>
+                                <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:info@afrodita.com">info@afrodita.com</a></p>
                                 <h4 class="footer-info-title">Office Location</h4>
                                 <p class="footer-info"><i class="fas fa-map-marker-alt"></i>25 Street, 145 City Road New Town DD14, USA</p>
                             </div>
