--- a/_includes/index-11-onepage.html
+++ b/_includes/index-11-onepage.html
@@ -1466,7 +1466,7 @@ Contact Area
                                 <h3 class="box-title">Phone Number</h3>
                                 <span class="contact-info_text">
                                     Mobile:
-                                    <a href="tel:+256214203215"> +256 214 203 215 </a>
+                                    <a href="tel:+19566002525"> +1 956 600 2525 </a>
                                 </span>
                                 <span class="contact-info_text">
                                     Email:
@@ -1577,10 +1577,10 @@ Contact Area
                         <div class="widget footer-widget">
                             <h3 class="widget_title">Contact Us</h3>
                             <div class="th-widget-about style2">
-                                <p class="footer-info"><i class="fas fa-map-marker-alt"></i>25 Street, 145 City Town, USA</p>
+                                <p class="footer-info"><i class="fas fa-map-marker-alt"></i>C. Hidalgo 687, CENTRO, 88500 Reynosa, Tamps., Mexico</p>
                                 <p class="footer-info"><i class="fa fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</p>
-                                <p class="footer-info"><i class="fa-sharp fa-solid fa-phone"></i><a class="text-inherit" href="tel:+256214203215">+256 214 203 215</a></p>
-                                <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:info@rasm.com">info@rasm.com</a></p>
+                                <p class="footer-info"><i class="fa-sharp fa-solid fa-phone"></i><a class="text-inherit" href="tel:+19566002525">+1 956 600 2525</a></p>
+                                <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:info@afrodita.com">info@afrodita.com</a></p>
                             </div>
                         </div>
                     </div>
