--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,22 +88,22 @@ Version: 1.0.0
 /*------------------- 1.2. Function -------------------*/
 /*------------------- 1.3. Variable-------------------*/
 :root {
-  --theme-color: #C28565;
-  --theme-color2: #AB6A49;
-  --title-color: #0D0D0D;
-  --body-color: #6E6E6E;
-  --smoke-color: #F9F3F0;
-  --smoke-color2: #E8CDBF;
-  --smoke-color3: #F4E8E1;
+  --theme-color: #f0a0c0;
+  --theme-color2: #d07090;
+  --title-color: #000000;
+  --body-color: #333333;
+  --smoke-color: #f8f8f8;
+  --smoke-color2: #e6e6e6;
+  --smoke-color3: #d9d9d9;
   --black-color: #000000;
-  --black-color2: #1b1b1b;
-  --gray-color: #B2B2B2;
+  --black-color2: #1a1a1a;
+  --gray-color: #666666;
   --white-color: #ffffff;
-  --light-color: #CDCDCD;
+  --light-color: #cccccc;
   --yellow-color: #FFB539;
   --success-color: #28a745;
   --error-color: #dc3545;
-  --border-color: #E0E0E0;
+  --border-color: #b3b3b3;
   --title-font:  'Cormorant Garamond', serif;
   --body-font: 'DM Sans', sans-serif;
   --style-font: 'Red Hat Display', cursive;
@@ -7567,7 +7567,7 @@ ol.wp-block-rss {
 .copyright-wrap {
   padding: 22px 0;
   background-size: 100% auto;
-  background-color: #53443D;
+  background-color: #1a1a1a;
 }
 
 .copyright-text {
@@ -7854,7 +7854,7 @@ ol.wp-block-rss {
   max-width: 1720px;
   display: block;
   margin: auto;
-  border: 1px solid #53443D;
+  border: 1px solid #1a1a1a;
   border-bottom: 1px solid transparent;
 }
 
@@ -7878,7 +7878,7 @@ ol.wp-block-rss {
 .footer-layout3 .copyright-wrap {
   --body-color: #fff;
   background-color: transparent;
-  border-top: 1px solid #53443D;
+  border-top: 1px solid #1a1a1a;
 }
 
 .footer-layout3 .copyright-wrap a {
@@ -17603,8 +17603,8 @@ span.select2-selection.select2-selection--single:focus {
 }
 
 .sec-shape:before {
-  background: -webkit-linear-gradient(right, #C28565 0%, rgba(194, 133, 101, 0) 100%);
-  background: linear-gradient(270deg, #C28565 0%, rgba(194, 133, 101, 0) 100%);
+  background: -webkit-linear-gradient(right, #f0a0c0 0%, rgba(240, 160, 192, 0) 100%);
+  background: linear-gradient(270deg, #f0a0c0 0%, rgba(240, 160, 192, 0) 100%);
   margin-left: -38rem;
   /* Extra small devices */
 }
@@ -17616,8 +17616,8 @@ span.select2-selection.select2-selection--single:focus {
 }
 
 .sec-shape:after {
-  background: -webkit-linear-gradient(left, #C28565 0%, rgba(194, 133, 101, 0) 100%);
-  background: linear-gradient(90deg, #C28565 0%, rgba(194, 133, 101, 0) 100%);
+  background: -webkit-linear-gradient(left, #f0a0c0 0%, rgba(240, 160, 192, 0) 100%);
+  background: linear-gradient(90deg, #f0a0c0 0%, rgba(240, 160, 192, 0) 100%);
   margin-left: 3rem;
   /* Extra small devices */
 }
@@ -18078,7 +18078,8 @@ span.select2-selection.select2-selection--single:focus {
 
 .blog-item-wrap {
   display: grid;
-  grid-template-areas: "one one one one one one one one one two two two" "one one one one one one one one one three three three";
+  grid-template-areas: "one one one one one one one one one two two two"
+ "one one one one one one one one one three three three";
 }
 
 .blog-item .blog-img {
@@ -18323,7 +18324,9 @@ span.select2-selection.select2-selection--single:focus {
 /* Medium devices */
 @media (max-width: 991px) {
   .blog-item-wrap {
-    grid-template-areas: "one one one" "two two two" "three three three";
+    grid-template-areas: "one one one"
+ "two two two"
+ "three three three";
   }
   .blog-item .blog-content {
     padding: 30px;
@@ -18937,7 +18940,7 @@ span.select2-selection.select2-selection--single:focus {
   position: relative;
   z-index: 3;
   margin: 0 100px;
-  border: 1px solid #53443D;
+  border: 1px solid #1a1a1a;
 }
 
 .newsletter-wrapper {
@@ -25925,8 +25928,8 @@ span.select2-selection.select2-selection--single:focus {
 .team-box.style3 .team-border {
   width: 106px;
   height: 2px;
-  background: -webkit-linear-gradient(right, rgba(194, 133, 101, 0) 4.24%, #C28565 52.64%, rgba(194, 133, 101, 0) 99.06%);
-  background: linear-gradient(270deg, rgba(194, 133, 101, 0) 4.24%, #C28565 52.64%, rgba(194, 133, 101, 0) 99.06%);
+  background: -webkit-linear-gradient(right, rgba(240, 160, 192, 0) 4.24%, #f0a0c0 52.64%, rgba(240, 160, 192, 0) 99.06%);
+  background: linear-gradient(270deg, rgba(240, 160, 192, 0) 4.24%, #f0a0c0 52.64%, rgba(240, 160, 192, 0) 99.06%);
   display: block;
   margin: auto;
   margin-bottom: 5px;
