--- a/assets/sass/template/sections/_why.scss
+++ b/assets/sass/template/sections/_why.scss
@@ -10,7 +10,7 @@
     position: relative;
     z-index: 3;
     margin: 0 100px;
-    border: 1px solid #53443D;
+    border: 1px solid #1a1a1a;
 }
 
 .newsletter-wrapper {
