--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,8 +93,8 @@ Version: 1.0.0
   --title-color: #000000;
   --body-color: #333333;
   --smoke-color: #f8f8f8;
-  --smoke-color2: #e6e6e6;
-  --smoke-color3: #d9d9d9;
+  --smoke-color2: #fff0f5; /* Very light pink */
+  --smoke-color3: #ffe0f0; /* Lighter pinkish color */
   --black-color: #000000;
   --black-color2: #1a1a1a;
   --gray-color: #666666;
@@ -6646,7 +6646,7 @@ ol.wp-block-rss {
 }
 
 .header-layout2 .main-menu {
-  padding-left: 93px;
+  padding-left: 250px;
   /* Medium Large devices */
 }
 
@@ -21073,7 +21073,7 @@ span.select2-selection.select2-selection--single:focus {
 
 .service-item .box-title {
   font-size: 20px;
-  margin-bottom: -0.9rem;
+  margin-bottom: 0;
 }
 
 .service-item:hover .service-item_icon {
