--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -359,7 +359,7 @@ appointment Area
                 <div class="col-lg-6 wow fadeInLeft">
                     <div class="title-area mb-25 text-center text-lg-start">
                         <span class="sub-title text-white">Haz una Cita<img src="assets/img/theme-img/title_right2.svg" alt=""></span>
-                        <h2 class="sec-title text-white">Experimenta la Magia de Nuestros Servicios de Estilismo de Uñas</h2>
+                        <h2 class="sec-title text-white">Descubre la Magia de Nuestros Servicios de Uñas</h2>
                     </div>
                     <div class="appointment-work  text-center text-lg-start">
                         <h4 class="work-title">Horario de Atención:</h4>
