--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -378,8 +378,9 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="far fa-phone"></i><a href="tel:+19566002525">+1 956 600 2525</a></li>
-                                <li><i class="far fa-envelope"></i><a href="mailto:info@afrodita.com">info@afrodita.com</a></li>
+                                <li><i class="far fa-phone"></i><a href="tel:8998669941">899 866 9941</a></li>
+                                <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/19569274373">+1(956)927-4373</a></li>
+                                <li><i class="far fa-envelope"></i><a href="mailto:Afroditaluxespa@gmail.com">Afroditaluxespa@gmail.com</a></li>
                                 <li><i class="fa-light fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</li>
                             </ul>
                         </div>
@@ -723,7 +724,7 @@ Contact Area
                                 <h4 class="footer-info-title">Phone Number</h4>
                                 <p class="footer-info"><i class="fa-sharp fa-solid fa-phone"></i><a class="text-inherit" href="tel:+19566002525">+1 956 600 2525</a></p>
                                 <h4 class="footer-info-title">Email Address</h4>
-                                <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:info@afrodita.com">info@afrodita.com</a></p>
+                                <p class="footer-info"><i class="fas fa-envelope"></i><a class="text-inherit" href="mailto:Afroditaluxespa@gmail.com">Afroditaluxespa@gmail.com</a></p>
                                 <h4 class="footer-info-title">Office Location</h4>
                                 <p class="footer-info"><i class="fas fa-map-marker-alt"></i>25 Street, 145 City Road New Town DD14, USA</p>
                             </div>
