--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -347,11 +347,15 @@
                                 <ul>
                                     <li>
                                         <i class="far fa-phone"></i>
-                                        <a href="tel:+19566002525">+1 956 600 2525</a>
+                                        <a href="tel:8998669941">899 866 9941</a>
+                                    </li>
+                                    <li>
+                                        <i class="fab fa-whatsapp"></i>
+                                        <a href="https://wa.me/19569274373">+1(956)927-4373</a>
                                     </li>
                                     <li>
                                         <i class="far fa-envelope"></i>
-                                        <a href="mailto:info@afrodita.com">info@afrodita.com</a>
+                                        <a href="mailto:Afroditaluxespa@gmail.com">Afroditaluxespa@gmail.com</a>
                                     </li>
                                     <li>
                                         <i class="fal fa-location-dot"></i>C. Hidalgo 687, CENTRO, 88500 Reynosa, Tamps., Mexico</li>
@@ -451,7 +455,11 @@
                                     <div class="th-widget-about">
                                         <p class="footer-info">
                                             <i class="fa-sharp fa-solid fa-phone"></i>
-                                            <a class="text-inherit" href="tel:+19566002525">+1 956 600 2525</a>
+                                            <a class="text-inherit" href="tel:8998669941">899 866 9941</a>
+                                        </p>
+                                        <p class="footer-info">
+                                            <i class="fab fa-whatsapp"></i>
+                                            <a class="text-inherit" href="https://wa.me/19569274373">+1(956)927-4373</a>
                                         </p>
                                         <p class="footer-info">
                                             <i class="fas fa-envelope"></i>
