--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -60,7 +60,9 @@ About Area
             <div class="video-group text-center">
                 {# <a href="about.html" class="th-btn">More About Us<i class="fa-regular fa-arrow-right ms-2"></i>
                 </a> #}
-                <a href="tel:+19566002525" class="th-btn style2">Haz una Llamada<i class="fa-regular fa-arrow-right ms-2"></i>
+                <a href="tel:8998669941" class="th-btn style2">Haz una Llamada<i class="fa-regular fa-arrow-right ms-2"></i>
+                </a>
+                <a href="https://wa.me/19569274373" class="th-btn style2">WhatsApp<i class="fab fa-whatsapp ms-2"></i>
                 </a>
             </div>
             <div class="row gy-4 align-items-center">
@@ -374,7 +376,7 @@ appointment Area
                 </div>
                 <div class="col-lg-6">
                     <div class="appointment-quote-form wow fadeInUp">
-                        <form name="appointment" method="POST" data-netlify="true">
+                        <form name="appointment" netlify>
                             <input type="hidden" name="form-name" value="appointment" />
                             <div class="row">
                                 <div class="col-md-6 form-group">
