--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -368,9 +368,8 @@ appointment Area
                         <p>Estamos dedicados a ofrecer resultados excepcionales y asegurar que tus uñas hagan una declaración audaz y
                             hermosa.</p>
                         <ul class="working-list">
-                            <li>Lunes a Viernes<span>09:00am - 20:00pm</span></li>
-                            <li>Sábado<span>10:00am - 18:00pm</span></li>
-                            <li>Domingo<span>Cerrado</span></li>
+                            <li>Lunes a Sábado<span>09:00am - 19:00pm</span></li>
+                            <li>Domingo<span>10:00am - 18:00pm</span></li>
                         </ul>
                     </div>
                 </div>
