--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -360,7 +360,7 @@
                                     <li>
                                         <i class="fal fa-location-dot"></i>C. Hidalgo 687, CENTRO, 88500 Reynosa, Tamps., Mexico</li>
                                     <li>
-                                        <i class="fa-light fa-clock"></i>Lun - Sáb: 8 AM - 15 PM Domingo Cerrado</li>
+                                        <i class="fa-light fa-clock"></i>Lunes a Sábado: 9 AM - 7 PM Domingo: 10 AM - 6 PM</li>
                                 </ul>
                             </div>
                         </div>
@@ -412,9 +412,9 @@
                                         <li>
                                             <a href="#service-sec">Servicios</a>
                                         </li>
-                                        <li>
+                                        {# <li>
                                             <a href="#gallery-sec">Galería</a>
-                                        </li>
+                                        </li> #}
                                         <li>
                                             <a href="#contact-sec">Contáctanos</a>
                                         </li>
@@ -463,7 +463,7 @@
                                         </p>
                                         <p class="footer-info">
                                             <i class="fas fa-envelope"></i>
-                                            <a class="text-inherit" href="mailto:info@afrodita.com">info@afrodita.com</a>
+                                            <a class="text-inherit" href="mailto:Afroditaluxespa@gmail.com">Afroditaluxespa@gmail.com</a>
                                         </p>
                                     </div>
                                     <div class="th-social footer-social mt-40">
