--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -381,7 +381,7 @@
                                 <li><i class="far fa-phone"></i><a href="tel:8998669941">899 866 9941</a></li>
                                 <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/19569274373">+1(956)927-4373</a></li>
                                 <li><i class="far fa-envelope"></i><a href="mailto:Afroditaluxespa@gmail.com">Afroditaluxespa@gmail.com</a></li>
-                                <li><i class="fa-light fa-clock"></i>Mon - Sat: 8 AM - 15 PM Sunday Off</li>
+                                <li><i class="fa-light fa-clock"></i>Lunes a Sábado: 9 AM - 7 PM Domingo: 10 AM - 6 PM</li>
                             </ul>
                         </div>
                     </div>
