--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -65,73 +65,13 @@ About Area
                 <a href="https://wa.me/19569274373" class="th-btn style2">WhatsApp<i class="fab fa-whatsapp ms-2"></i>
                 </a>
             </div>
-            <div class="row gy-4 align-items-center">
-                <div class="col-xl-6 col-xxl-8">
+            <div class="row gy-4 justify-content-center">
+                <div class="col-lg-8">
                     <div class="video-box1 wow fadeInDown" data-bg-src="assets/img/normal/video_1.jpg">
                         <img src="assets/img/normal/video_1.jpg" alt="video">
                         <a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="video-play-btn play-btn popup-video">
                             <i class="fa-sharp fa-solid fa-play"></i>
                         </a>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-xxl-4">
-                    <div class="counter-content">
-                        <div class="th-counterup style2 wow fadeInUp">
-                            <div class="inner">
-                                <div class="icon">
-                                    <img src="assets/img/icon/counter_2_1.svg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3 class="counter">
-                                        <span class="odometer" data-count="26">00</span>
-                                        <span class="counter-number">+</span>
-                                    </h3>
-                                    <p class="counter-card_text">Años de Experiencia</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="th-counterup style2 wow fadeInUp">
-                            <div class="inner">
-                                <div class="icon">
-                                    <img src="assets/img/icon/counter_2_2.svg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3 class="counter">
-                                        <span class="odometer" data-count="100">00</span>
-                                        <span class="counter-number">%</span>
-                                    </h3>
-                                    <p class="counter-card_text">Productos Naturales</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="th-counterup style2 wow fadeInUp">
-                            <div class="inner">
-                                <div class="icon">
-                                    <img src="assets/img/icon/counter_2_3.svg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3 class="counter">
-                                        <span class="odometer" data-count="56">00</span>
-                                        <span class="counter-number">k+</span>
-                                    </h3>
-                                    <p class="counter-card_text">Clientes Satisfechos</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="th-counterup style2 wow fadeInUp">
-                            <div class="inner">
-                                <div class="icon">
-                                    <img src="assets/img/icon/counter_2_4.svg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3 class="counter">
-                                        <span class="odometer" data-count="36">00</span>
-                                        <span class="counter-number">+</span>
-                                    </h3>
-                                    <p class="counter-card_text">Equipo de Especialistas</p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
