--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -240,7 +240,7 @@ Price Area
                                     </h4>
                                     <p class="price-box_desc">Elemental tempus getas</p>
                                 </div>
-                                <span class="price-box_price">$26</span>
+                                <span class="price-box_price">TBD</span>
                             </div>
                         </div>
                         <div class="price-box wow fadeInUp">
@@ -251,7 +251,7 @@ Price Area
                                     </h4>
                                     <p class="price-box_desc">Productos de calidad, servicios personalizados</p>
                                 </div>
-                                <span class="price-box_price">$15</span>
+                                <span class="price-box_price">TBD</span>
                             </div>
                         </div>
                         <div class="price-box wow fadeInUp">
@@ -262,7 +262,7 @@ Price Area
                                     </h4>
                                     <p class="price-box_desc">Esmaltes de uñas de primera calidad</p>
                                 </div>
-                                <span class="price-box_price">$34</span>
+                                <span class="price-box_price">TBD</span>
                             </div>
                         </div>
                         <div class="price-box wow fadeInUp">
@@ -273,7 +273,7 @@ Price Area
                                     </h4>
                                     <p class="price-box_desc">Masaje rejuvenecedor de manos o pies</p>
                                 </div>
-                                <span class="price-box_price">$60</span>
+                                <span class="price-box_price">TBD</span>
                             </div>
                         </div>
                         <div class="price-box wow fadeInUp">
@@ -284,7 +284,7 @@ Price Area
                                     </h4>
                                     <p class="price-box_desc">Colores vibrantes, acabados</p>
                                 </div>
-                                <span class="price-box_price">$46</span>
+                                <span class="price-box_price">TBD</span>
                             </div>
                         </div>
                     </div>
