--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -557,6 +557,7 @@
                                 <i class="fal fa-copyright"></i>
                                 2024
                                 <a href="#">Afrodita</a>. All Rights Reserved.</p>
+                                <p>Website powered by <a href="https://lorenzanadesigns.com">Lorenzana Web Design</a></p> 
                         </div>
                         <div class="col-lg-6">
                             <div class="footer-links">
