--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -451,7 +451,7 @@
                                         <a href="index.html"><img src="{{ '/assets/img/logo.jpeg' | url }}" alt="Afrodita" style="max-height: 75px;">
                                         </a>
                                     </div>
-                                    <p class="about-text">Aplicaciones céntricas que productizan portales de interfaz visualizan la interfaz.</p>
+                                    {# <p class="about-text">Aplicaciones céntricas que productizan portales de interfaz visualizan la interfaz.</p> #}
                                     <div class="th-widget-about">
                                         <p class="footer-info">
                                             <i class="fa-sharp fa-solid fa-phone"></i>
@@ -488,14 +488,14 @@
                                 <h3 class="widget_title">Enlaces Rápidos</h3>
                                 <div class="menu-all-pages-container">
                                     <ul class="menu">
-                                        <li>
+                                        {# <li>
                                             <a href="about.html">Sobre Nosotros</a>
                                         </li>
-                                        {# <li><a href="booking.html">Work Gallery</a></li>
-                                                                            <li><a href="contact.html">Privacy Policy</a></li>
-                                                                            <li><a href="service.html">Our Services</a></li>
-                                                                            <li><a href="price.html">Pricing Plans</a></li>
-                                                                            <li><a href="contact.html">Contact Us</a></li> #}
+                                        <li><a href="booking.html">Work Gallery</a></li> #}
+                                                                            <li><a href="#">Privacy Policy</a></li>
+                                                                            {# <li><a href="service.html">Our Services</a></li>
+                                                                            <li><a href="price.html">Pricing Plans</a></li> #}
+                                                                            <li><a href="#">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -506,14 +506,14 @@
                                 <div class="menu-all-pages-container">
                                     <ul class="menu">
                                         <li>
-                                            <a href="service.html">Manos y Pies</a>
+                                            <a href="#">Manos y Pies</a>
                                         </li>
                                         {# <li><a href="service.html">Facials Waxing</a></li>
                                                                             <li><a href="service.html">Body Waxing</a></li>
                                                                             <li><a href="service.html">Brows & Lashes</a></li>
                                                                             <li><a href="service.html">Body Massage</a></li>
-                                                                            <li><a href="service.html">Hair Color</a></li> #}
-                                    </ul>
+                                                                            <li><a href="service.html">Hair Color</a></li>
+                                    </ul> #}
                                 </div>
                             </div>
                         </div>
