--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -65,7 +65,7 @@ About Area
                 <a href="https://wa.me/19569274373" class="th-btn style2">WhatsApp<i class="fab fa-whatsapp ms-2"></i>
                 </a>
             </div>
-            <div class="row gy-4 justify-content-center">
+            {# <div class="row gy-4 justify-content-center">
                 <div class="col-lg-8">
                     <div class="video-box1 wow fadeInDown" data-bg-src="assets/img/normal/video_1.jpg">
                         <img src="assets/img/normal/video_1.jpg" alt="video">
@@ -74,7 +74,7 @@ About Area
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> #}
         </div>
         <div class="shape-mockup d-none d-lg-block jump" data-top="0%" data-left="0%"><img src="assets/img/shape/flower_1_5.png" alt="shape">
         </div>
@@ -305,8 +305,7 @@ appointment Area
                     </div>
                     <div class="appointment-work  text-center text-lg-start">
                         <h4 class="work-title">Horario de Atención:</h4>
-                        <p>Estamos dedicados a ofrecer resultados excepcionales y asegurar que tus uñas hagan una declaración audaz y
-                            hermosa.</p>
+                        <p style="">Estamos dedicados a ofrecer resultados excepcionales</p>
                         <ul class="working-list">
                             <li>Lunes a Sábado<span>09:00am - 19:00pm</span></li>
                             <li>Domingo<span>10:00am - 18:00pm</span></li>
