--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -164,7 +164,7 @@ About Area
                     <div class="pe-xl-5 me-xl-3">
                         <div class="title-area mt-60 mb-25 wow fadeInLeft">
                             <span class="sub-title">¿Por Qué Elegirnos?<img src="assets/img/theme-img/title_right.svg" alt=""></span>
-                            <h2 class="sec-title">Tenemos 25 Años de Experiencia en Estilismo de Uñas.</h2>
+                            <h2 class="sec-title">Expertos en Estilismo de Uñas.</h2>
                             <p class="mt-n2 mb-35">Priorizamos la limpieza y comodidad de nuestros clientes, asegurando un ambiente higiénico
                                 y
                                 relajante durante toda tu visita. Nuestro salón cumple con estrictos protocolos de sanitización,
